src/ImperaSDLParser/ImperaParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g 2015-05-14 11:21:21

package ImperaSDLParser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class ImperaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "DECL", "BLOCK", "FUNCTION", "PARAMS", "POS", "NEG", "CALL", "ARGS", "CAST", "ID", "EQUAL", "SC", "BREAK", "CONTINUE", "WHILE", "LP", "RP", "IF", "ELSE", "RETURN", "PRINT", "PRINTLN", "LBRACE", "RBRACE", "SET", "COMMA", "XOR", "OR", "AND", "EQUIV", "NOTEQ", "LTHAN", "GTHAN", "LTHANE", "GTHANE", "PLUS", "MINUS", "CONCAT", "MULT", "DIV", "POW", "NOT", "GET", "KVPAIR", "NUMBER", "FPNUMBER", "TRUE", "FALSE", "STRING", "QUOTE", "VAR", "KEY", "OBJECT", "ARRAY", "VOID", "MULTILINE_COMMENT", "COMMENT", "LB", "RB", "DOT", "NULL", "US", "BSLASH", "AS", "PRED", "WS", "DIGIT"
    };
    public static final int EOF=-1;
    public static final int PROGRAM=4;
    public static final int DECL=5;
    public static final int BLOCK=6;
    public static final int FUNCTION=7;
    public static final int PARAMS=8;
    public static final int POS=9;
    public static final int NEG=10;
    public static final int CALL=11;
    public static final int ARGS=12;
    public static final int CAST=13;
    public static final int ID=14;
    public static final int EQUAL=15;
    public static final int SC=16;
    public static final int BREAK=17;
    public static final int CONTINUE=18;
    public static final int WHILE=19;
    public static final int LP=20;
    public static final int RP=21;
    public static final int IF=22;
    public static final int ELSE=23;
    public static final int RETURN=24;
    public static final int PRINT=25;
    public static final int PRINTLN=26;
    public static final int LBRACE=27;
    public static final int RBRACE=28;
    public static final int SET=29;
    public static final int COMMA=30;
    public static final int XOR=31;
    public static final int OR=32;
    public static final int AND=33;
    public static final int EQUIV=34;
    public static final int NOTEQ=35;
    public static final int LTHAN=36;
    public static final int GTHAN=37;
    public static final int LTHANE=38;
    public static final int GTHANE=39;
    public static final int PLUS=40;
    public static final int MINUS=41;
    public static final int CONCAT=42;
    public static final int MULT=43;
    public static final int DIV=44;
    public static final int POW=45;
    public static final int NOT=46;
    public static final int GET=47;
    public static final int KVPAIR=48;
    public static final int NUMBER=49;
    public static final int FPNUMBER=50;
    public static final int TRUE=51;
    public static final int FALSE=52;
    public static final int STRING=53;
    public static final int QUOTE=54;
    public static final int VAR=55;
    public static final int KEY=56;
    public static final int OBJECT=57;
    public static final int ARRAY=58;
    public static final int VOID=59;
    public static final int MULTILINE_COMMENT=60;
    public static final int COMMENT=61;
    public static final int LB=62;
    public static final int RB=63;
    public static final int DOT=64;
    public static final int NULL=65;
    public static final int US=66;
    public static final int BSLASH=67;
    public static final int AS=68;
    public static final int PRED=69;
    public static final int WS=70;
    public static final int DIGIT=71;

    // delegates
    // delegators


        public ImperaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ImperaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[83+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ImperaParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:31:1: program : globals -> ^( PROGRAM globals ) ;
    public final ImperaParser.program_return program() throws RecognitionException {
        ImperaParser.program_return retval = new ImperaParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        Object root_0 = null;

        ImperaParser.globals_return globals1 = null;


        RewriteRuleSubtreeStream stream_globals=new RewriteRuleSubtreeStream(adaptor,"rule globals");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:32:3: ( globals -> ^( PROGRAM globals ) )
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:32:5: globals
            {
            pushFollow(FOLLOW_globals_in_program123);
            globals1=globals();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_globals.add(globals1.getTree());


            // AST REWRITE
            // elements: globals
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 32:13: -> ^( PROGRAM globals )
            {
                // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:32:16: ^( PROGRAM globals )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                adaptor.addChild(root_1, stream_globals.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class globals_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "globals"
    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:35:1: globals : ( declaration )* ( function )* ;
    public final ImperaParser.globals_return globals() throws RecognitionException {
        ImperaParser.globals_return retval = new ImperaParser.globals_return();
        retval.start = input.LT(1);
        int globals_StartIndex = input.index();
        Object root_0 = null;

        ImperaParser.declaration_return declaration2 = null;

        ImperaParser.function_return function3 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:36:3: ( ( declaration )* ( function )* )
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:36:5: ( declaration )* ( function )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:36:5: ( declaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=VAR && LA1_0<=VOID)) ) {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==ID) ) {
                        int LA1_3 = input.LA(3);

                        if ( ((LA1_3>=EQUAL && LA1_3<=SC)) ) {
                            alt1=1;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:0:0: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_globals146);
            	    declaration2=declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:36:18: ( function )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=VAR && LA2_0<=VOID)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:0:0: function
            	    {
            	    pushFollow(FOLLOW_function_in_globals149);
            	    function3=function();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, function3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, globals_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "globals"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:39:1: declaration : type ID ( EQUAL expr )? SC -> ^( DECL type ID ( EQUAL expr )? ) ;
    public final ImperaParser.declaration_return declaration() throws RecognitionException {
        ImperaParser.declaration_return retval = new ImperaParser.declaration_return();
        retval.start = input.LT(1);
        int declaration_StartIndex = input.index();
        Object root_0 = null;

        Token ID5=null;
        Token EQUAL6=null;
        Token SC8=null;
        ImperaParser.type_return type4 = null;

        ImperaParser.expr_return expr7 = null;


        Object ID5_tree=null;
        Object EQUAL6_tree=null;
        Object SC8_tree=null;
        RewriteRuleTokenStream stream_SC=new RewriteRuleTokenStream(adaptor,"token SC");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:40:3: ( type ID ( EQUAL expr )? SC -> ^( DECL type ID ( EQUAL expr )? ) )
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:40:5: type ID ( EQUAL expr )? SC
            {
            pushFollow(FOLLOW_type_in_declaration165);
            type4=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type4.getTree());
            ID5=(Token)match(input,ID,FOLLOW_ID_in_declaration167); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);

            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:40:13: ( EQUAL expr )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==EQUAL) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:40:14: EQUAL expr
                    {
                    EQUAL6=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_declaration170); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUAL.add(EQUAL6);

                    pushFollow(FOLLOW_expr_in_declaration172);
                    expr7=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expr.add(expr7.getTree());

                    }
                    break;

            }

            SC8=(Token)match(input,SC,FOLLOW_SC_in_declaration176); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SC.add(SC8);



            // AST REWRITE
            // elements: ID, expr, EQUAL, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 40:30: -> ^( DECL type ID ( EQUAL expr )? )
            {
                // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:40:33: ^( DECL type ID ( EQUAL expr )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECL, "DECL"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:40:48: ( EQUAL expr )?
                if ( stream_expr.hasNext()||stream_EQUAL.hasNext() ) {
                    adaptor.addChild(root_1, stream_EQUAL.nextNode());
                    adaptor.addChild(root_1, stream_expr.nextTree());

                }
                stream_expr.reset();
                stream_EQUAL.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, declaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:43:1: statement : ( assignment | printstatement | returnstatement | statcall | ifstatement | whilestatement | BREAK SC | CONTINUE SC );
    public final ImperaParser.statement_return statement() throws RecognitionException {
        ImperaParser.statement_return retval = new ImperaParser.statement_return();
        retval.start = input.LT(1);
        int statement_StartIndex = input.index();
        Object root_0 = null;

        Token BREAK15=null;
        Token SC16=null;
        Token CONTINUE17=null;
        Token SC18=null;
        ImperaParser.assignment_return assignment9 = null;

        ImperaParser.printstatement_return printstatement10 = null;

        ImperaParser.returnstatement_return returnstatement11 = null;

        ImperaParser.statcall_return statcall12 = null;

        ImperaParser.ifstatement_return ifstatement13 = null;

        ImperaParser.whilestatement_return whilestatement14 = null;


        Object BREAK15_tree=null;
        Object SC16_tree=null;
        Object CONTINUE17_tree=null;
        Object SC18_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:44:3: ( assignment | printstatement | returnstatement | statcall | ifstatement | whilestatement | BREAK SC | CONTINUE SC )
            int alt4=8;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:44:5: assignment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_statement208);
                    assignment9=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment9.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:45:5: printstatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_printstatement_in_statement214);
                    printstatement10=printstatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, printstatement10.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:46:5: returnstatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_returnstatement_in_statement220);
                    returnstatement11=returnstatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, returnstatement11.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:47:5: statcall
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_statcall_in_statement226);
                    statcall12=statcall();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, statcall12.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:48:5: ifstatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifstatement_in_statement232);
                    ifstatement13=ifstatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ifstatement13.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:49:5: whilestatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_whilestatement_in_statement238);
                    whilestatement14=whilestatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, whilestatement14.getTree());

                    }
                    break;
                case 7 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:50:5: BREAK SC
                    {
                    root_0 = (Object)adaptor.nil();

                    BREAK15=(Token)match(input,BREAK,FOLLOW_BREAK_in_statement244); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    BREAK15_tree = (Object)adaptor.create(BREAK15);
                    adaptor.addChild(root_0, BREAK15_tree);
                    }
                    SC16=(Token)match(input,SC,FOLLOW_SC_in_statement246); if (state.failed) return retval;

                    }
                    break;
                case 8 :
                    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:51:5: CONTINUE SC
                    {
                    root_0 = (Object)adaptor.nil();

                    CONTINUE17=(Token)match(input,CONTINUE,FOLLOW_CONTINUE_in_statement253); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    CONTINUE17_tree = (Object)adaptor.create(CONTINUE17);
                    adaptor.addChild(root_0, CONTINUE17_tree);
                    }
                    SC18=(Token)match(input,SC,FOLLOW_SC_in_statement255); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, statement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class whilestatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "whilestatement"
    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:54:1: whilestatement : WHILE LP expr RP block -> ^( WHILE expr block ) ;
    public final ImperaParser.whilestatement_return whilestatement() throws RecognitionException {
        ImperaParser.whilestatement_return retval = new ImperaParser.whilestatement_return();
        retval.start = input.LT(1);
        int whilestatement_StartIndex = input.index();
        Object root_0 = null;

        Token WHILE19=null;
        Token LP20=null;
        Token RP22=null;
        ImperaParser.expr_return expr21 = null;

        ImperaParser.block_return block23 = null;


        Object WHILE19_tree=null;
        Object LP20_tree=null;
        Object RP22_tree=null;
        RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
        RewriteRuleTokenStream stream_RP=new RewriteRuleTokenStream(adaptor,"token RP");
        RewriteRuleTokenStream stream_LP=new RewriteRuleTokenStream(adaptor,"token LP");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:55:3: ( WHILE LP expr RP block -> ^( WHILE expr block ) )
            // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:55:5: WHILE LP expr RP block
            {
            WHILE19=(Token)match(input,WHILE,FOLLOW_WHILE_in_whilestatement271); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_WHILE.add(WHILE19);

            LP20=(Token)match(input,LP,FOLLOW_LP_in_whilestatement273); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LP.add(LP20);

            pushFollow(FOLLOW_expr_in_whilestatement275);
            expr21=expr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expr.add(expr21.getTree());
            RP22=(Token)match(input,RP,FOLLOW_RP_in_whilestatement277); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RP.add(RP22);

            pushFollow(FOLLOW_block_in_whilestatement279);
            block23=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block23.getTree());


            // AST REWRITE
            // elements: expr, WHILE, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 55:28: -> ^( WHILE expr block )
            {
                // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:55:31: ^( WHILE expr block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_WHILE.nextNode(), root_1);

                adaptor.addChild(root_1, stream_expr.nextTree());
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, whilestatement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "whilestatement"

    public static class ifstatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ifstatement"
    // C:\\Users\\Lyle\\workspace\\ImperaDSL\\src\\ImperaSDLParser\\Impera.g:58:1: ifstatement : IF LP expr RP block ( ELSE block )? -> ^( IF expr block ( ELSE block )? ) ;
    public final ImperaParser.ifstatement_return ifstatement() throws RecognitionException {
        ImperaParser.ifstatement_return retval = new ImperaParser.ifstatement_return();
        retval.start = input.LT(1);
        int ifstatement_StartIndex = input.index();
        Object root_0 = null;

        Token IF24=null;
        Token LP25=null;
        Token RP27=null;
        Token ELSE29=null;
        ImperaParser.expr_return expr26 = null;

        ImperaParser.block_return block28 = null;

        ImperaParser.block_return block30 = null;

